# l20-1674

./: .env.example  .env.test  .gitignore  README.md  alembic.ini  example_client.py  pyproject.toml  requirements.txt  run.py
app/: main.py
app/api/: __init__.py  admin.py  coupon.py  partner_auth.py
app/config/: settings.py
app/core/: __init__.py  constants.py  exceptions.py
app/db/: __init__.py  session.py
app/models/: __init__.py  activity.py  coupon_package.py  coupon_package_sku.py  partner.py  partner_api_log.py  user.py  user_behavior_log.py  user_coupon.py
app/schemas/: __init__.py  admin.py  coupon.py
app/services/: __init__.py  admin_service.py  coupon_service.py  validation_service.py
scripts/: init_test_data.py
tests/: conftest.py  test_api_endpoints.py  test_coupon_service.py  test_new_features.py  test_round2.py  test_round3.py  test_round4.py  test_validation_service.py
