[tool.poetry]
name = "comic-coupon-service"
version = "1.0.0"
description = "漫画阅读平台券包发放后端服务"
authors = ["Platform Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
aiomysql = "^0.2.0"
redis = {extras = ["hiredis"], version = "^5.0.1"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
alembic = "^1.13.1"
httpx = "^0.26.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
faker = "^22.0.0"
ruff = "^0.1.14"
mypy = "^1.8.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.10"
strict = true
plugins = ["sqlalchemy.ext.mypy.plugin"]

[tool.ruff]
line-length = 100
target-version = "py310"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
